# FleXgeo2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
backbone_cli/: __init__.py  cli.py
docs/wiki/: Citation.md  Clustering-Conformations.md  Command-Line-Guide.md  Home.md  Installation.md  Notebook-Tutorials.md  Python-Library-Guide.md  Quickstart-Analysis.md  Reference-State-Comparison.md  Understanding-Outputs.md  _Sidebar.md  dmax-Flexibility-Metric.md
notebooks/: 01_quickstart_analysis.ipynb  02_working_with_results.ipynb  03_reference_comparison.ipynb  04_clustering_conformations.ipynb  05_cli_to_python_mapping.ipynb  06_dmax_library_api.ipynb
src/flexgeo2/: __init__.py  clustering.py  config.py  distances.py  geometry.py  models.py  outputs.py  pipeline.py  plotting.py
src/flexgeo2/cli/: __init__.py  main.py
tests/: conftest.py  test_cli.py  test_clustering.py  test_distances.py  test_geometry.py  test_pipeline.py
