[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FleXgeo2"
version = "0.1.0"
description = "FleXgeo2 prototype for protein backbone differential geometry analysis using Melodia."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hdbscan>=0.8",
    "melodia-py",
    "matplotlib>=3.8",
    "nglview>=4.0",
    "numba>=0.60",
    "pandas>=2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
flexgeo2 = "flexgeo2.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flexgeo2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
